fix overflow, footer and spacing between read more buttons and content

--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -1,8 +1,9 @@
 .container {
 width: 100%;
-  height: 91vh;
+  height: 100vh;
   background-color: rgba(255, 228, 196, 0.726);
-  padding: 0.125em;
+  padding: 0.5em;
+  overflow: auto;
 }
 .b2b {
   text-decoration: underline;
