--- a/css/blog.css
+++ b/css/blog.css
@@ -37,7 +37,7 @@ div .button {
   border: 1px solid var(--footer-color);
   border-radius: 0.5em;
   padding: 0.5em;
-  margin: 0.25em;
+  margin: 0.5em 0 1em 0;
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*~~~~~~~~~~ Media Queries~~~~~~~~~ */
